--- a/components/ContactBlock.module.css
+++ b/components/ContactBlock.module.css
@@ -124,7 +124,7 @@
 }
 
 .locationsSection {
-  padding: 15px;
+  padding: 15px 0;
   display: flex;
   align-items: center;
   justify-content: center;
